app/assets/stylesheets/signup-login.css.scss
// @media (max-width: $screen-sm-min) {
//   #sign-form {

// }

#sign-form {
background: rgba(0,0,0,0.6);
color: lightgrey;
width: 60%;
margin: 10px auto;
padding: 10px 10px;
border-radius: 5px;
text-align: center;
}


body.signup-signin {
  background-image: image-url("deck.jpg");
  // background-image: url(http://mazwai.com/system/posts/videos/000/000/138/original/matt_devir--one_minute_drive.mp4?1416271335);
  background-size: cover;
  background-position: center top;
  background-attachment: fixed;
  color: grey;
  height: 800px;
  padding-top: 80px;

  h2 {
    color: white;
  }

  #sign-form a {
    color: white;
  }
}

#fb-login {
padding: 10px 10px;
text-align: center;
margin: 5px;
border-bottom: 1px dotted lightgrey;
padding-bottom: 20px;
}

.icon-alignement {
  margin-right: 10px;
  vertical-align: bottom;
}

#user_email {
  color: grey;
  font-weight: normal;
  width: 170px;
}

#user_password {
  color: grey;
  font-weight: normal;
   width: 170px;
}

#user_password_confirmation {
  color: grey;
  font-weight: normal;
   width: 170px;
}

@media screen and (max-width: 580px) {
  #sign-form {
   width: 90%;
  }
}

